# rugby_realsense

./: CMakeLists.txt  CMakeLists.txt~  Readme  nodelet_plugins.xml  package.xml
launch/: Readme  Readme~  r200_amcl_dwa_ekf.launch  r200_amcl_dwa_ekf.launch~  r200_driver.launch  r200_driver.launch~  r200_driver_high.launch~  r200_ekf_locolization.launch~  r200_navigation.launch  r200_navigation.launch~  r200_nodelet_rgbd.launch~  r200_rtabmap_localization_ekf.launch  r200_rtabmap_localization_ekf.launch~  r200_rtabmap_localization_ekf_test.launch  r200_rtabmap_mapping_ekf.launch  r200_rtabmap_mapping_ekf_test.launch  r200_rtabmap_mapping_vo.launch  r200_vo_mapping.launch~  rugby_base_pyserial_ekf.launch  rugby_base_pyserial_ekf.launch~  test.launch~  test2.launch~
launch/Test/: 2Dfilter_test_low.launch  depth2laser_test.launch  depth_2_pcl_2_RadiusRemove_test.launch  depth_2_pcl_2_StatisticalRemove_test.launch  gy85_driver.launch  odroid_auto_start.launch~  r200_driver_high.launch  r200_rtabmap_localization_ekf_test.launch  r200_rtabmap_mapping_ekf_test.launch  r200_rtabmap_mapping_ekf_test_cont.launch  rugby_base_pyserial_ekf_test.launch  test.launch
launch/includes/: Depth_to_laser_2Dfilter.launch.xml  Pointcloud_to_Octomap.launch.xml  nodelet_rgbd.launch.xml  r200_move_base_dwa_ekf.launch.xml  r200_move_base_dwa_ekf.launch.xml~  realsense_r200_nodelet.launch.xml~  robot_pose_ekf.launch.xml
launch/param/: Stereo_costmap_common_params.yaml~  base_local_planner_params.yaml~  costmap_common_params.yaml~  dwa_base_local_planner_params.yaml  local_costmap_params.yaml~  local_costmap_params_ekf.yaml  pose_sensor_fix.yaml~  position_pose_sensor_fix.yaml~  rugby_gy85.yaml
modeldescription/urdf/: rugby.xacro
modeldescription/urdf/sensors/: gy85.urdf.xacro
src/: PointCloud_setValid.cpp~
src/nodelets/: DepthChangeEncode.cpp~  LaserToPointCloud.cpp  PointCloudSetValid.cpp  PointCloud_setValid.cpp~
src/python/: imu_node.py
